Fri Apr 24 10:40:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_{getc,putc}): removed.  they are needed for old
	  ruby (before 1.8), but not now.

Fri Apr 24 08:40:13 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c: remove bcc related code.

	* include/ruby/win32.h: ditto.

Fri Apr 24 08:21:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (rb_acrt_lowio_lock_fh): wrap _pioinfo(i)->lock.

	* win32/win32.c (rb_acrt_lowio_unlock_fh): ditto.

Fri Apr 24 06:47:19 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (_filbuf): msvc14 doesn't have it, use _fgetc_nolock.

	* win32/win32.c (_flsbuf): msvc14 doesn't have it, use _fputc_nolock.

	* win32/win32.c (vcruntime_file): define vcruntime_file on msvc14
	  because it doesn't export FILE's internal structure.

	* win32/win32.c (FILE_COUNT): added to abstract FILE->_cnt.

	* win32/win32.c (FILE_READPTR): added to abstract FILE->_ptr.

	* win32/win32.c (FILE_FILENO): added to abstract FILE->_file.

	* win32/win32.c (init_stdhandle): use FILE_FILENO.

	* win32/win32.c (rb_w32_getc): use FILE_COUNT and FILE_READPTR.

	* win32/win32.c (rb_w32_putc): ditto.

Fri Apr 24 06:37:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (dupfd): use _set_osfhnd.

	* win32/win32.c (rb_w32_wopen): use _set_osflags.

Thu Apr 24 05:38:01 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_roots): fox to work PRINT_ROOT_TICKS.

Fri Apr 24 04:49:05 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/Makefile.sub: MSVC14 have struct timespec.

	* win32/rtname.cmd: support vcruntime140.dll.

	* time.c (localtime_with_gmtoff_zone): MSVC14 doesn't have tzname and
	  daylight but have _tzname and _daylight.

Thu Apr 23 11:35:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_obj_instance_eval, rb_obj_instance_exec): allow
	  symbols to just instance_eval/exec, except for definition of
	  singletons.  [ruby-core:68961] [Bug #11086]
