@@ -1,3 +1,8 @@
+Fri Apr 24 23:48:45 2015  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-electric.el: Import version 2.2.3 from
+	  https://github.com/knu/ruby-electric.el.
+
 Fri Apr 24 10:40:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_{getc,putc}): removed.  they are needed for old
